# cmuza

./: .clangd  .gitignore  CMakeLists.txt  README.md  acetza.py  pyproject.toml  rations.txt
fish/: build.fish  clean.fish  fmt.fish  full-build.fish  init.fish  rename.fish  run.fish
fish/util/: dump-format.fish  fmt-cmake.fish  fmt-cpp.fish  fmt-fish.fish  mkdir.fish  rmdir.fish
muza/include/acetza/: math.h  measure.h  panic.h  printing.h  types.h
muza/include/acetza/muza/: intervals.h  main.h  math.h  renders.h  types.h  wave.h
muza/include/acetza/muza/functions/: numberers.h  primitives.h  transformers.h
muza/include/acetza/muza/synths/: synth0.h  synthx0.h
muza/include/acetza/muza/wavers/: basic.h  enveloper.h  harmonizer.h  waver.h
muza/include/acetza/muza/wavers/enveloper/: transform.h
muza/source/: main.c
muza/source/acetza/functions/numberers.h/: numberers.c
muza/source/acetza/functions/primitives.h/: primitives.c
muza/source/acetza/functions/transformers.h/: transformers.c
muza/source/acetza/math.h/: math.c
muza/source/acetza/measure.h/: measure.c
muza/source/acetza/muza/intervals.h/: intervals.c  print.c
muza/source/acetza/muza/main.h/: main.c
muza/source/acetza/muza/math.h/: math.c
muza/source/acetza/muza/renders.h/: renders.c
muza/source/acetza/muza/synths/synth0.h/: synth0.c
muza/source/acetza/muza/wave.h/: add.c  effects.c  frame_rate.c  getters.c  io.c  operations.c  wave.c
muza/source/acetza/muza/wavers/basic.h/: basic.c  reference.c
muza/source/acetza/muza/wavers/enveloper.h/: enveloper.c  reference.c
muza/source/acetza/muza/wavers/enveloper/transform.h/: transform.c
muza/source/acetza/muza/wavers/harmonizer.h/: harmonizer.c  reference.c
muza/source/acetza/muza/wavers/waver.h/: waver.c
muza/source/acetza/panic.h/: panic.c
muza/source/acetza/printing.h/: printing.c
py/: build.py  init.py
pyman/: clean.py  run.py
source/: main.c
