cmake_minimum_required(VERSION 3.28)
project(Acetza)
include(FindPkgConfig)
pkg_check_modules(SNDFILE REQUIRED sndfile>=1.2.2)
pkg_check_modules(GLIB2 REQUIRED glib-2.0>=2.80)
file(GLOB_RECURSE SOURCES "muza/source/*.c")
add_executable(muza ${SOURCES})
set_property(TARGET muza PROPERTY COMPILE_WARNING_AS_ERROR ON)
set_property(TARGET muza PROPERTY C_STANDARD 23)
set_property(TARGET muza PROPERTY C_STANDARD_REQUIRED ON)
target_include_directories(muza PRIVATE "muza/include")
target_compile_options(muza PRIVATE -Wall -Wextra -Wpedantic -Werror -Wfatal-errors)
target_link_libraries(muza m)
target_compile_options(muza PRIVATE ${SNDFILE_CFLAGS} ${SNDFILE_CFLAGS_OTHER} ${GLIB2_CFLAGS} ${GLIB2_CFLAGS_OTHER})
target_link_options(muza PRIVATE ${SNDFILE_LDFLAGS} ${SNDFILE_LDFLAGS_OTHER} ${GLIB2_LDFLAGS} ${GLIB2_LDFLAGS_OTHER})