[tool.poetry]
name = "muza"
version = "0.1.0"
description = "Music software"
authors = ["José Martínez <marquevjosman@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
